<?xml version="1.0"?>
<package>
  <name>cvdnn_core</name>
  <version>0.1.0</version>
  <description>Core module of ros_cvdnn</description>
  <maintainer email="nekanat.stock@gmail.com">neka-nat</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>opencv2</run_depend>

</package>